--- a/Projects/Calculator/index.html
+++ b/Projects/Calculator/index.html
@@ -12,34 +12,34 @@
 
 <body>
     <div class=form>
-        <input class=text type='text'>
-        <div class=button>
+        <input class="text" type='text'>
+        <div class="button">
             <input class=number type="button" value="1">
             <input class=number type="button" value="2">
             <input class=number type="button" value="3">
             <input class=number type="button" value="*">
             <input class=number type="button" value="/">
         </div>
-        <div class=button>
+        <div class="button">
             <input class=number type="button" value="4">
             <input class=number type="button" value="5">
             <input class=number type="button" value="6">
             <input class=number type="button" value="-">
             <input class=number type="button" value="C">
         </div>
-        <div class=button>
+        <div class="button">
             <input class=number type="button" value="7">
             <input class=number type="button" value="8">
             <input class=number type="button" value="9">
 
-            <input class=bigbutton type="button" value="+">
+            <input class="bigbutton" type="button" value="+">
 
 
         </div>
-        <div class=down>
-            <input class=number type="button" value="0">
-            <div class=rawno>
-                <input class=bigbutton type="button" value="=">
+        <div class="down">
+            <input class="number" type="button" value="0">
+            <div class="result">
+                <input class="bigbutton" type="button" value="=">
             </div>
         </div>
 
